[gd_scene load_steps=5 format=3 uid="uid://dhe51nn4he3qy"]

[ext_resource type="Script" path="res://monster/rabbit.gd" id="1_ckmd1"]
[ext_resource type="Texture2D" uid="uid://bwwn17166uysp" path="res://Assets/rabbit.png" id="1_fq0pf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3iycc"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b1a0n"]
radius = 19.0263

[node name="RabbitNew" type="CharacterBody2D" groups=["rabbit"]]
collision_layer = 4
script = ExtResource("1_ckmd1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3iycc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fq0pf")

[node name="MatingArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="MatingArea"]
shape = SubResource("CircleShape2D_b1a0n")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
unique_name_in_owner = true

[node name="TimerFollow" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="TimerMating" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="body_entered" from="MatingArea" to="." method="_on_mating_range_body_entered"]
[connection signal="timeout" from="TimerFollow" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerMating" to="." method="_on_timer_mating_timeout"]
